install.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.22.1
    app.quarkus.io/build-timestamp: 2025-10-01 - 20:44:26 +0000
  labels:
    app.kubernetes.io/name: ejemplo-promerica
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: ejemplo-promerica
  namespace: promerica
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: ejemplo-promerica
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/quarkus-version: 3.22.1
    app.quarkus.io/build-timestamp: 2025-10-01 - 20:44:26 +0000
  labels:
    app.kubernetes.io/name: ejemplo-promerica
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: ejemplo-promerica
  namespace: promerica
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ejemplo-promerica
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/quarkus-version: 3.22.1
        app.quarkus.io/build-timestamp: 2025-10-01 - 20:44:26 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: ejemplo-promerica
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: registry.promnet.com.sv:5000/xtecuan/ejemplo-promerica:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: ejemplo-promerica
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccountName: ejemplo-promerica
