egress-to-oracle.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-oracle
  namespace: promerica
spec:
  # Aplica la política a todos los pods en el namespace 'promerica'
  # Si necesitas ser más específico, usa un podSelector con etiquetas
  podSelector: {} 
  policyTypes:
    - Egress
  egress:
    # Esta regla permite el tráfico saliente
    - to:
        - ipBlock:
            # La dirección IP de la base de datos Oracle
            cidr: 10.5.149.2/32
      ports:
        - protocol: TCP
          # El puerto de conexión de la base de datos Oracle
          port: 1521
